syntax = "proto3";

package agent;

option go_package = "./agent";

// 陪玩推荐 Agent 服务
service Agent {
  // 根据用户输入推荐陪玩
  rpc RecommendCompanion(RecommendCompanionRequest) returns (RecommendCompanionResponse);

  // 添加陪玩信息到向量数据库
  rpc AddCompanionToVectorDB(AddCompanionToVectorDBRequest) returns (AddCompanionToVectorDBResponse);
}

// 推荐陪玩请求
message RecommendCompanionRequest {
  string user_input = 1;  // 用户输入内容（如："我想要一个王者荣耀的陪玩"）
  uint64 user_id    = 2;  // 用户ID（可选，用于个性化推荐）
}

// 陪玩推荐结果
message CompanionRecommendation {
  uint64 user_id       = 1;  // 陪玩用户ID
  string game_skill    = 2;  // 游戏技能
  string gender        = 3;  // 性别
  int32  age           = 4;  // 年龄
  string description   = 5;  // 描述
  int64  price_per_hour = 6; // 每小时价格
  double rating        = 7;  // 评分
  double similarity    = 8;  // 相似度分数（0-1）
}

// 推荐陪玩响应
message RecommendCompanionResponse {
  repeated CompanionRecommendation companions = 1; // 推荐的陪玩列表
  string explanation = 2; // 推荐理由说明
}

// 添加陪玩信息到向量数据库请求
message AddCompanionToVectorDBRequest {
  uint64 user_id       = 1;  // 用户ID（必填）
  string gender        = 2;  // 性别：male/female/other
  int32  age           = 3;  // 年龄
  string game_skill     = 4;  // 游戏技能（单个游戏名称）
  string description    = 5;  // 陪玩描述文本（用于向量化）
  int64  price_per_hour = 6; // 每小时价格（帅币）
  double rating        = 7;  // 评分（0-5分）
}

// 添加陪玩信息到向量数据库响应
message AddCompanionToVectorDBResponse {
  uint64 companion_id = 1;  // 陪玩ID（Milvus中的ID）
  bool   success      = 2;  // 是否成功
  string message      = 3;  // 提示信息
}

